--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
