--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "private": true,
   "dependencies": {
     "@google/generative-ai": "^0.19.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^10.13.0",
+    "framer-motion": "^11.17.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.417.0",
     "match-sorter": "^6.3.4",
     "openai": "^4.63.0",
+    "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
